# api/audit/v1/openapi.json
@@ -31,6 +31,7 @@
           "iam.policy-version.created",
           "iam.policy.default-version-set",
           "iam.policy.updated",
+          "iam.policy.deleted",
           "iam.group.updated",
           "iam.group.deleted",
           "iam.group-membership.created",
@@ -507,6 +508,32 @@
                   "properties": {
                     "action": {
                       "const": "iam.policy.updated"
+                    }
+                  },
+                  "required": [
+                    "action"
+                  ]
+                }
+              },
+              "required": [
+                "event"
+              ]
+            },
+            "then": {
+              "properties": {
+                "source": {
+                  "const": "IAM"
+                }
+              }
+            }
+          },
+          {
+            "if": {
+              "properties": {
+                "event": {
+                  "properties": {
+                    "action": {
+                      "const": "iam.policy.deleted"
                     }
                   },
                   "required": [
@@ -2486,6 +2513,51 @@
               "properties": {
                 "action": {
                   "const": "iam.policy.updated"
+                }
+              },
+              "required": [
+                "action"
+              ]
+            },
+            "then": {
+              "properties": {
+                "actor": {
+                  "properties": {
+                    "type": {
+                      "const": "USER"
+                    }
+                  }
+                },
+                "installationId": false,
+                "operationId": false,
+                "result": {
+                  "enum": [
+                    "SUCCEEDED"
+                  ]
+                },
+                "target": {
+                  "properties": {
+                    "kind": {
+                      "const": "POLICY"
+                    },
+                    "tenantId": false
+                  },
+                  "required": [
+                    "kind"
+                  ]
+                }
+              },
+              "required": [
+                "tenantId",
+                "iamDecisionId"
+              ]
+            }
+          },
+          {
+            "if": {
+              "properties": {
+                "action": {
+                  "const": "iam.policy.deleted"
                 }
               },
               "required": [
